--- a/MVC5/MVC5.csproj
+++ b/MVC5/MVC5.csproj
@@ -142,17 +142,11 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="DAL\IItemRepository.cs" />
-    <Compile Include="DAL\InMemoryRepoData.cs" />
-    <Compile Include="DAL\ItemContext.cs" />
-    <Compile Include="DAL\ItemRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\IItemRepository.cs" />
-    <Compile Include="Repository\MockItemRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -211,6 +205,16 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MVC5.BLL\MVC5.BLL.csproj">
+      <Project>{F561AD88-157D-4D78-895B-500388E8EC60}</Project>
+      <Name>MVC5.BLL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MVC5.Core\MVC5.DAL.csproj">
+      <Project>{83A3073A-8C66-4FDF-B33E-05DCE8D8ACE5}</Project>
+      <Name>MVC5.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
